item overflow issue

--- a/index.css
+++ b/index.css
@@ -50,8 +50,8 @@ button:hover {
 }
 
 .counter {
-    height: 20px;
-    min-width: 30%;
+    min-height: 20px;
+    min-width: 20%;
     padding: 10px;
     background-color: #44354A;
     border-radius: 50px;
